tests/files/type_checker_tests/should_fail/193.cmdr
//Should fail if using variable out of scope
{
    type a = int;
}
x: a = 3;
